Cleanup documentation and built.